# ascii-generator

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  cache.py  data.json  docker-compose.yml  fileserve.conf  lambda_function.py  main.py  prompt.py  pyproject.toml  rate.py  utils.py
infra/: main.tf  variables.tf
lambda-pkg/: Readme  lambda_function.py  main.py  rate.py  utils.py
templates/: art-iframe.html  art.html  ascii.html  gallery.html  index.html
